# eight

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  flake.nix
.github/workflows/: container.yaml  example.yaml  release.yaml  test.yaml
eight/: Cargo.toml  README.md  build.rs
eight-cli/: Cargo.toml
eight-cli/src/: cli.rs  main.rs
eight-serve/: Cargo.toml  README.md
eight-serve/src/: cli.rs  http.rs  main.rs  query.rs  websocket.rs
eight/src/: filesystem.rs  lib.rs  messaging.rs  result.rs  storage.rs
eight/src/client/: http.rs  messaging.rs  mod.rs  result.rs  tests.rs  websocket.rs
eight/src/embedded/: README.md  messaging.rs  mod.rs  result.rs
eight/src/embedded/filesystem/: mod.rs  utils.rs
eight/src/embedded/language/: lexer.rs  mod.rs  parser.rs  runtime.rs  tests.rs  token.rs
eight/src/embedded/server/: base.rs  executor.rs  mod.rs  permission.rs
eight/src/embedded/storage/: filesystem.rs  memory.rs  mod.rs
eight/src/expose/: http.rs  mod.rs  websocket.rs
eight/src/filesystem/: mod.rs  utils.rs
eight/src/grpc/: grpc.rs  lib.rs
eight/src/grpc/proto/: eight.proto
eight/src/language/: lexer.rs  mod.rs  parser.rs  runtime.rs  tests.rs  token.rs
eight/src/macros/: mod.rs
eight/src/server/: base.rs  executor.rs  message.rs  mod.rs  permission.rs  server.rs  tests.rs
eight/src/storage/: interface.rs  mod.rs  tests.rs
eight/tests/: eight_test.rs  test_server.rs  test_storage.rs
examples/blog-example/: Cargo.toml
examples/blog-example/src/: main.rs
examples/eight-custom-storage/: Cargo.toml
examples/eight-custom-storage/src/: main.rs
examples/eight-expose/: Cargo.toml
examples/eight-expose/src/: main.rs
