[package]
name = "eight-serve"
version = "1.0.0"
edition = "2021"
license = "BSD-3-Clause"
description = "Expose eight to web"
homepage = "https://github.com/meppu/eight/tree/main/eight-serve"
repository = "https://github.com/meppu/eight"
authors = ["meppu <meppu@proton.me>"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
eight = { version = "1.0.0-alpha", features = ["expose"] }
clap = { version = "4.2", features = ["derive"] }
