[package]
name = "eight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros", "fs", "sync", "time"] }

# optional
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
axum = { version = "0.6", features = ["ws"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio-tungstenite = { version = "0.18", optional = true }
rand = { version = "0.8", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
macros = []
serde = ["dep:serde"]
client = ["serde", "dep:serde_json", "dep:reqwest", "dep:tokio-tungstenite", "dep:rand"]
expose = ["client", "dep:axum"]
full = ["macros", "serde", "client", "expose"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
