[package]
name = "eight"
version = "1.0.0-alpha.2"
edition = "2021"
license = "BSD-3-Clause"
description = "Modular asynchronous embedded key-value database"
homepage = "https://github.com/meppu/eight/tree/main/eight"
repository = "https://github.com/meppu/eight"
keywords = ["key-value", "database", "db", "embedded-database", "key-value-store"]
categories = ["database-implementations", "data-structures", "embedded"]
authors = ["meppu <crates@meppu.boo>"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
futures = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["rt", "fs", "sync", "time"] }
async-trait = "0.1"

# optional
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
axum = { version = "0.6", features = ["ws"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio-tungstenite = { version = "0.18", optional = true }
rand = { version = "0.8", optional = true }
tracing = { version =  "0.1", optional = true }
tracing-subscriber = { version =  "0.3", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["filesystem-storage", "in-memory-storage"]
macros = []
in-memory-storage = []
filesystem-storage = []
serde = ["dep:serde"]
client = ["serde", "dep:serde_json", "dep:reqwest", "dep:tokio-tungstenite", "dep:rand"]
expose = ["client", "dep:axum", "dep:tracing", "dep:tracing-subscriber"]
full = ["macros", "expose", "in-memory-storage", "filesystem-storage"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
